# sed2

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
schemas/: task.schema.json  task_definition.schema.json  workflow.schema.json
src/sed2/: core.py  examples.py  io.py  schema.py  viz.py  webapp.py
src/sed2/examples/: data_read.py  input_data.csv  ode_simulation.json  ode_simulation.py  ode_simulation_load.py
src/sed2/implementations/dagster/: jobs.py  ops.py
src/sed2/registry/: TODO.md  __init__.py  definitions.py  repository.json
tests/: test_core.py  test_examples.py  test_workflow.py
