[project]
name = "sed2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "sbmlutils>=0.9.6",
]

[project.optional-dependencies]
dagster = [
    "dagster>=1.9",
    "dagster-webserver>=1.9",
    "pandas>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
